--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 
             <!-- Main Content -->
             <div id="content" class="bg-dark">
+                <div class="not">
+
+<p class="notfi">I am working on this website, Stay update</p>
+</div>
 
                 <!-- Topbar -->
                 <nav class="navbar navbar-expand fixed-top navbar-dark bg-dark topbar mb-4 static-top shadow">
