--- a/index.html
+++ b/index.html
@@ -28,13 +28,11 @@
 
         <!-- Content Wrapper -->
         <div id="content-wrapper" class="d-flex flex-column" style="height: 110%; background-color: #333;">
-
-            <!-- Main Content -->
-            <div id="content" class="bg-dark">
-                <div class="not">
-
+<div class="not">
 <p class="notfi">I am working on this website, Stay update</p>
 </div>
+            <!-- Main Content -->
+            <div id="content" class="bg-dark"
 
                 <!-- Topbar -->
                 <nav class="navbar navbar-expand fixed-top navbar-dark bg-dark topbar mb-4 static-top shadow">
